Fixed image alignment at article overview page

--- a/src/.vuepress/theme/components/Blog/Articles/Articles.styl
+++ b/src/.vuepress/theme/components/Blog/Articles/Articles.styl
@@ -11,6 +11,7 @@
     .image
       img
         width 100%
+        vertical-align top
 
   .clickable
     color initial
